Fix signature preview overflowing.
Not sure if this is the best thing, but at least it does not break the layout.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -3577,6 +3577,11 @@ dl.addrules dt.floatleft {
 	float: left;
 }
 
+/* Signature preview */
+dd#preview_signature_display {
+	overflow: hidden;
+}
+
 /* Issue a warning */
 #warn_body {
 	width: 80%;
